<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Sui.
  ~
  ~ Sui is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Sui is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Sui.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2025-2026 Sui Contributors
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_filter_shizuku"
        android:title="@string/action_filter_shizuku_apps"
        android:checkable="true" />
    <item
        android:id="@+id/action_batch_unconfigured"
        android:title="@string/action_batch_unconfigured" />
    <item
        android:id="@+id/action_add_shortcut"
        android:title="@string/action_add_shortcut" />
    <item
        android:id="@+id/action_monet"
        android:title="@string/action_monet"
        android:checkable="true" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
</menu>
